MainParser.cpp

// Generated from Main.g4 by ANTLR 4.7.1


#include "MainVisitor.h"

#include "MainParser.h"


using namespace antlrcpp;
using namespace antlr4;

MainParser::MainParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MainParser::~MainParser() {
  delete _interpreter;
}

std::string MainParser::getGrammarFileName() const {
  return "Main.g4";
}

const std::vector<std::string>& MainParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MainParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

MainParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MainParser::FunctContext *> MainParser::ProgContext::funct() {
  return getRuleContexts<MainParser::FunctContext>();
}

MainParser::FunctContext* MainParser::ProgContext::funct(size_t i) {
  return getRuleContext<MainParser::FunctContext>(i);
}


size_t MainParser::ProgContext::getRuleIndex() const {
  return MainParser::RuleProg;
}

antlrcpp::Any MainParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

MainParser::ProgContext* MainParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, MainParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MainParser::T__36

    || _la == MainParser::TYPE) {
      setState(46);
      funct();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctContext ------------------------------------------------------------------

MainParser::FunctContext::FunctContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MainParser::DeffuncContext* MainParser::FunctContext::deffunc() {
  return getRuleContext<MainParser::DeffuncContext>(0);
}

MainParser::DeclarfuncContext* MainParser::FunctContext::declarfunc() {
  return getRuleContext<MainParser::DeclarfuncContext>(0);
}


size_t MainParser::FunctContext::getRuleIndex() const {
  return MainParser::RuleFunct;
}

antlrcpp::Any MainParser::FunctContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitFunct(this);
  else
    return visitor->visitChildren(this);
}

MainParser::FunctContext* MainParser::funct() {
  FunctContext *_localctx = _tracker.createInstance<FunctContext>(_ctx, getState());
  enterRule(_localctx, 2, MainParser::RuleFunct);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(52);
      deffunc();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(53);
      declarfunc();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

MainParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MainParser::ExprContext::getRuleIndex() const {
  return MainParser::RuleExpr;
}

void MainParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParContext ------------------------------------------------------------------

MainParser::ExprContext* MainParser::ParContext::expr() {
  return getRuleContext<MainParser::ExprContext>(0);
}

MainParser::ParContext::ParContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::ParContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitPar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultdivmodContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::MultdivmodContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::MultdivmodContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::MultdivmodContext::MultdivmodContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::MultdivmodContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitMultdivmod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::ConstContext::INT() {
  return getToken(MainParser::INT, 0);
}

MainParser::ConstContext::ConstContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::ConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitConst(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SizeofContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::SizeofContext::TYPE() {
  return getToken(MainParser::TYPE, 0);
}

tree::TerminalNode* MainParser::SizeofContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::SizeofContext::SizeofContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::SizeofContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitSizeof(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::VarContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::VarContext::VarContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::VarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CmpContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::CmpContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::CmpContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::CompareContext* MainParser::CmpContext::compare() {
  return getRuleContext<MainParser::CompareContext>(0);
}

MainParser::CmpContext::CmpContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::CmpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitCmp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprBinContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::ExprBinContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::ExprBinContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::ExprBinContext::ExprBinContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::ExprBinContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitExprBin(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AddsubContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::AddsubContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::AddsubContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::AddsubContext::AddsubContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::AddsubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitAddsub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ElemarrayContext ------------------------------------------------------------------

MainParser::ElemrvContext* MainParser::ElemarrayContext::elemrv() {
  return getRuleContext<MainParser::ElemrvContext>(0);
}

MainParser::ElemarrayContext::ElemarrayContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::ElemarrayContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitElemarray(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OuExBinContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::OuExBinContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::OuExBinContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::OuExBinContext::OuExBinContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::OuExBinContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitOuExBin(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PostopContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::PostopContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::PostopContext::PostopContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::PostopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitPostop(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExfuncContext ------------------------------------------------------------------

MainParser::ExecfuncContext* MainParser::ExfuncContext::execfunc() {
  return getRuleContext<MainParser::ExecfuncContext>(0);
}

MainParser::ExfuncContext::ExfuncContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::ExfuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitExfunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OuBinContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::OuBinContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::OuBinContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::OuBinContext::OuBinContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::OuBinContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitOuBin(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignementContext ------------------------------------------------------------------

MainParser::ExprContext* MainParser::AssignementContext::expr() {
  return getRuleContext<MainParser::ExprContext>(0);
}

tree::TerminalNode* MainParser::AssignementContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::ElemlvContext* MainParser::AssignementContext::elemlv() {
  return getRuleContext<MainParser::ElemlvContext>(0);
}

MainParser::AssignementContext::AssignementContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::AssignementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitAssignement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CharContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::CharContext::CHAR() {
  return getToken(MainParser::CHAR, 0);
}

MainParser::CharContext::CharContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::CharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitChar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PreopContext ------------------------------------------------------------------

tree::TerminalNode* MainParser::PreopContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::PreopContext::PreopContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::PreopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitPreop(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EtBinContext ------------------------------------------------------------------

std::vector<MainParser::ExprContext *> MainParser::EtBinContext::expr() {
  return getRuleContexts<MainParser::ExprContext>();
}

MainParser::ExprContext* MainParser::EtBinContext::expr(size_t i) {
  return getRuleContext<MainParser::ExprContext>(i);
}

MainParser::EtBinContext::EtBinContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any MainParser::EtBinContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitEtBin(this);
  else
    return visitor->visitChildren(this);
}

MainParser::ExprContext* MainParser::expr() {
   return expr(0);
}

MainParser::ExprContext* MainParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  MainParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  MainParser::ExprContext *previousContext = _localctx;
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, MainParser::RuleExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ExfuncContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(57);
      execfunc();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ElemarrayContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(58);
      elemrv();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<SizeofContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(59);
      match(MainParser::T__0);
      setState(60);
      match(MainParser::T__1);
      setState(61);
      _la = _input->LA(1);
      if (!(_la == MainParser::TYPE

      || _la == MainParser::VAR)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(62);
      match(MainParser::T__2);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<PostopContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(63);
      match(MainParser::VAR);
      setState(64);
      _la = _input->LA(1);
      if (!(_la == MainParser::T__3

      || _la == MainParser::T__4)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<PreopContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(65);
      _la = _input->LA(1);
      if (!(_la == MainParser::T__3

      || _la == MainParser::T__4)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(66);
      match(MainParser::VAR);
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<ConstContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(67);
      match(MainParser::INT);
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<VarContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(68);
      match(MainParser::VAR);
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<CharContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(69);
      match(MainParser::CHAR);
      break;
    }

    case 9: {
      _localctx = _tracker.createInstance<ParContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(70);
      match(MainParser::T__1);
      setState(71);
      expr(0);
      setState(72);
      match(MainParser::T__2);
      break;
    }

    case 10: {
      _localctx = _tracker.createInstance<AssignementContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(76);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(74);
        match(MainParser::VAR);
        break;
      }

      case 2: {
        setState(75);
        elemlv();
        break;
      }

      }
      setState(78);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MainParser::T__15)
        | (1ULL << MainParser::T__16)
        | (1ULL << MainParser::T__17)
        | (1ULL << MainParser::T__18)
        | (1ULL << MainParser::T__19)
        | (1ULL << MainParser::T__20)
        | (1ULL << MainParser::T__21)
        | (1ULL << MainParser::T__22)
        | (1ULL << MainParser::T__23))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(79);
      expr(1);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(106);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(104);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<MultdivmodContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(82);

          if (!(precpred(_ctx, 12))) throw FailedPredicateException(this, "precpred(_ctx, 12)");
          setState(83);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << MainParser::T__5)
            | (1ULL << MainParser::T__6)
            | (1ULL << MainParser::T__7))) != 0))) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(84);
          expr(13);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<AddsubContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(85);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(86);
          _la = _input->LA(1);
          if (!(_la == MainParser::T__8

          || _la == MainParser::T__9)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(87);
          expr(12);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<EtBinContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(88);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(89);
          match(MainParser::T__10);
          setState(90);
          expr(7);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<OuExBinContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(91);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(92);
          match(MainParser::T__11);
          setState(93);
          expr(6);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<OuBinContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(94);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(95);
          match(MainParser::T__12);
          setState(96);
          expr(5);
          break;
        }

        case 6: {
          auto newContext = _tracker.createInstance<ExprBinContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(97);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(98);
          _la = _input->LA(1);
          if (!(_la == MainParser::T__13

          || _la == MainParser::T__14)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(99);
          expr(4);
          break;
        }

        case 7: {
          auto newContext = _tracker.createInstance<CmpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(100);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(101);
          compare();
          setState(102);
          expr(3);
          break;
        }

        } 
      }
      setState(108);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- CompareContext ------------------------------------------------------------------

MainParser::CompareContext::CompareContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MainParser::CompareContext::getRuleIndex() const {
  return MainParser::RuleCompare;
}

antlrcpp::Any MainParser::CompareContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitCompare(this);
  else
    return visitor->visitChildren(this);
}

MainParser::CompareContext* MainParser::compare() {
  CompareContext *_localctx = _tracker.createInstance<CompareContext>(_ctx, getState());
  enterRule(_localctx, 6, MainParser::RuleCompare);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MainParser::T__24:
      case MainParser::T__25: {
        enterOuterAlt(_localctx, 1);
        setState(109);
        _la = _input->LA(1);
        if (!(_la == MainParser::T__24

        || _la == MainParser::T__25)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(111);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MainParser::T__23) {
          setState(110);
          match(MainParser::T__23);
        }
        break;
      }

      case MainParser::T__23:
      case MainParser::T__26: {
        enterOuterAlt(_localctx, 2);
        setState(113);
        _la = _input->LA(1);
        if (!(_la == MainParser::T__23

        || _la == MainParser::T__26)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(114);
        match(MainParser::T__23);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElemlvContext ------------------------------------------------------------------

MainParser::ElemlvContext::ElemlvContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MainParser::ElemlvContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::ExprContext* MainParser::ElemlvContext::expr() {
  return getRuleContext<MainParser::ExprContext>(0);
}


size_t MainParser::ElemlvContext::getRuleIndex() const {
  return MainParser::RuleElemlv;
}

antlrcpp::Any MainParser::ElemlvContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitElemlv(this);
  else
    return visitor->visitChildren(this);
}

MainParser::ElemlvContext* MainParser::elemlv() {
  ElemlvContext *_localctx = _tracker.createInstance<ElemlvContext>(_ctx, getState());
  enterRule(_localctx, 8, MainParser::RuleElemlv);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(MainParser::VAR);
    setState(118);
    match(MainParser::T__27);
    setState(119);
    expr(0);
    setState(120);
    match(MainParser::T__28);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElemrvContext ------------------------------------------------------------------

MainParser::ElemrvContext::ElemrvContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MainParser::ElemrvContext::VAR() {
  return getToken(MainParser::VAR, 0);
}

MainParser::ExprContext* MainParser::ElemrvContext::expr() {
  return getRuleContext<MainParser::ExprContext>(0);
}


size_t MainParser::ElemrvContext::getRuleIndex() const {
  return MainParser::RuleElemrv;
}

antlrcpp::Any MainParser::ElemrvContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitElemrv(this);
  else
    return visitor->visitChildren(this);
}

MainParser::ElemrvContext* MainParser::elemrv() {
  ElemrvContext *_localctx = _tracker.createInstance<ElemrvContext>(_ctx, getState());
  enterRule(_localctx, 10, MainParser::RuleElemrv);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(MainParser::VAR);
    setState(123);
    match(MainParser::T__27);
    setState(124);
    expr(0);
    setState(125);
    match(MainParser::T__28);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfinsContext ------------------------------------------------------------------

MainParser::IfinsContext::IfinsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MainParser::ExprContext* MainParser::IfinsContext::expr() {
  return getRuleContext<MainParser::ExprContext>(0);
}

MainParser::StatementContext* MainParser::IfinsContext::statement() {
  return getRuleContext<MainParser::StatementContext>(0);
}

MainParser::BlockContext* MainParser::IfinsContext::block() {
  return getRuleContext<MainParser::BlockContext>(0);
}

std::vector<MainParser::ElseifinsContext *> MainParser::IfinsContext::elseifins() {
  return getRuleContexts<MainParser::ElseifinsContext>();
}

MainParser::ElseifinsContext* MainParser::IfinsContext::elseifins(size_t i) {
  return getRuleContext<MainParser::ElseifinsContext>(i);
}

MainParser::ElseinsContext* MainParser::IfinsContext::elseins() {
  return getRuleContext<MainParser::ElseinsContext>(0);
}


size_t MainParser::IfinsContext::getRuleIndex() const {
  return MainParser::RuleIfins;
}

antlrcpp::Any MainParser::IfinsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MainVisitor*>(visitor))
    return parserVisitor->visitIfins(this);
  else
    return visitor->visitChildren(this);
}
